# CurrentFlow-2.0

./: .gitignore  DASHBOARD_GUIDE.md  DEVELOPMENT_PLAN.md  EXECUTIVE_PRESENTATION.md  GRAPHICS_GUIDE.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  QUICKSTART.md  README.md  eda_ons.py  main.py  pyproject.toml  run_dashboard.sh  weather.ipynb
data/models/: anomaly_detector.pkl
data/processed/: energy_weather_2021.parquet  energy_weather_2022.parquet  energy_weather_2023.parquet  energy_weather_2024.parquet
data/raw/: CARGA_ENERGIA_2024.csv
data/raw/inmet/: dados_belem_A201_D.csv  dados_belo_horizonte_A521_D.csv  dados_curitiba_A807_D.csv  dados_florianopolis_A806_D.csv  dados_fortaleza_A305_D.csv  dados_manaus_A101_D.csv  dados_porto_alegre_A801_D.csv  dados_porto_velho_A925_D.csv  dados_rio_de_janeiro_A621_D.csv  dados_salvador_A401_D.csv  dados_sao_paulo_A771_D.csv
scripts/: compare_models.py  generate_sample_years.py  process_multiyear_data.py  quick_analysis.py  test_inmet_loader.py  test_ons_loader.py  test_pipeline.py  train_model.py  update_features.py
src/: app.py  concat_datasets.ipynb  dashboard.py  load.ipynb  merge_datasets.py  prepare_load_data.py  weather.ipynb
src/app/: __init__.py  main.py
src/app/components/: charts.py  metrics.py
src/data/: loaders.py  preprocessor.py
src/models/: __init__.py  anomaly_detector.py
src/notebooks_explore/: concat_datasets.ipynb  weather_explore.ipynb
src/utils/: __init__.py  config.py
src/weather_utils/: __init__.py  get_weather.py  process_weather.py  regions.py
