[project]
name = "current-flow-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"pandas>=2.2.2",
	"numpy>=2.1.2",
	"matplotlib>=3.9.2",
	"seaborn>=0.13.2",
	"openpyxl>=3.1.5",
	"requests>=2.32.3",
	"scikit-learn>=1.5.2",
]
